2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Set initial window correctly on recovery

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: s/check_auth/check_host_setting/g, check
	maxdumps is the same for all DLEs of a host

2015-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Check return value of Amanda::Changer->new

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Time::HiRes is not available everywhere.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set total_time to the time of amvault
	  on an amvault run.
	* perl/Amanda/Report/human.pm: Parse amvault FINISH line.
	* server-src/amvault.pl Log a FINISH line.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Improve message.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c: More fix if SAMBA_CLIENT is not
	  defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: More fix if SAMBA_CLIENT is not defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tests.swg: #include "glib-util.h"

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: #include "glib-util.h",
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_connect):  return a
	  gboolean.
	* perl/Amanda/Tests.swg: #include "glib-init.h"
	* perl/Amanda/Util.swg: #include "match.h"
	* perl/Amanda/Util.swg:  rename crc32 to crc32_add.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/missing,
	  config/test-driver, config/ylwrap: Newer version of files.

2015-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check auth on both local and client check.
